--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-      "module": "es6",
-      "target": "es5",
+      "module": "CommonJS",
+      "target": "ES5",
       "declaration": true,
       "declarationDir": "dist",
       "outDir": "dist",
