--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "The Nettu Node library provides convenient access to the Nettu API from applications written in server-side JavaScript or web based applications",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:coverage": "jest --collect-coverage",
+    "coverage": "nyc mocha",
     "deploy": "tsc && npm publish"
   },
   "repository": {
@@ -30,5 +32,13 @@
   "bugs": {
     "url": "https://github.com/fmeringdal/nettu-sdk-js/issues"
   },
-  "homepage": "https://github.com/fmeringdal/nettu-sdk-js#readme"
+  "homepage": "https://github.com/fmeringdal/nettu-sdk-js#readme",
+  "devDependencies": {
+    "@ava/typescript": "^1.1.1",
+    "@types/jest": "^26.0.7",
+    "jest": "^26.1.0",
+    "ts-jest": "^26.1.3",
+    "typescript": "^3.9.7"
+  },
+  "dependencies": {}
 }
