--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,4 @@
 version: 2.1
-orbs:
-  codecov: codecov/codecov@1.1.1
 jobs:  
   build:
     docker:
@@ -11,4 +9,9 @@ jobs:
       - run:
           name: "Run Jest and Collect Coverage Reports"
           command: npm run test:coverage
-      - codecov/upload
+      - run:
+          name: "Install codecov globally"
+          command: npm install codecov -g
+      - run:
+          name: "Upload coverage"
+          command: codecov
