--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "@types/jest": "^26.0.7",
     "jest": "^26.1.0",
     "ts-jest": "^26.1.3",
+    "ts-mockito": "^2.6.1",
     "typescript": "^3.9.7"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.19.2"
+  }
 }
