--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "graphql-request": "^2.1.0-next.1"
   }
 }
